[package]
name = "tasklings"
description = "Your terminal long term goal tracker"
license = "GPL-3.0"
repository = "https://github.com/0xsecaas/tasklings"
readme = "README.md"
keywords = ["cli", "task-manager", "personal-development", "goal-tracker"]
categories = [
  "command-line-utilities",
  "personal-development",
  "task-management",
]
version = "0.1.0"
edition = "2021"
authors = ["Charly <github.womankind045@passinbox.com>"]

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
crossterm = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29.0"
